deps/v8/test/message/var-conflict-in-with.out
*%(basename)s:5: SyntaxError: Identifier 'x' has already been declared
{ { with ({}) var x; } let x; }
                  ^
SyntaxError: Identifier 'x' has already been declared
